2006-11-26  Juho Snellman  <jsnell@iki.fi>

	Restore the way M-n and M-p used to work in the REPL. (cherry-picked
	from a patch with other changes, sent by Attila Lendvai).

	* slime.el (slime-repl-previous-input-starting-with-current-input)
	(slime-repl-next-input-starting-with-current-input): New functions,
	work like the old slime-repl-previous-input / next-input.
	(slime-repl-matching-input-regexp): Restore old version.	
	(slime-repl-mode-map): Bind s-r-p-i-s-w-c-i and s-r-n-i-s-w-c-i
	to M-p and M-n respectively. slime-repl-previous-input and
	slime-repl-next-input are still accessible with C-up / C-down.
	
2006-11-25  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-repl-read-break): Use a :emacs-interrupt message
	instead of a RPC to swank:simple-break.  Suggested by Taylor R
	Campbell.

2006-11-24  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-search-buffer-package): Prettify the package
	name if it is written as string or keyword.

2006-11-23  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-in-expression-p): Use `read' and `eq' to test
	the first element of the list.  Previuosly, the pattern (foo)
	wrongly matched (foobar) because we used (looking-at <symbol>).

	* swank-cmucl.lisp (setf-definitions): Also include defs which
	were created with (defun (setf NAME) ...).  Previously we only
	found definitions created with defsetf or define-setf-expander.

2006-11-22  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-edit-definition): Don't hide error messages.

2006-11-21  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (*coding-system*): "Coding systems" are now strings
	instead of keywords.

2006-11-19  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-compile-file): Let the Lisp side choose the
	coding system.
	(slime-coding): Deleted.

	* swank.lisp (compile-file-for-emacs): Use guess-external-format.
	(swank:create-server): no more accepts an  :external-format 'enc ,